made some bigtrouble changes

--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <! --
-Some text that just reflects as changes.
+These changes are being made in the bigtrouble branch.
 -->
 <head>
 	<title>A Practice Website</title>
