making changes on master branch that conflict

--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <! --
-Adding changes before rebasing conflicts.
+Some text that just reflects as changes.
 -->
 <head>
 	<title>A Practice Website</title>
