changes after git stash

--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <! --
-Changing something.
+Example for learning git.  Making changes to this file often.
 -->
 <head>
 	<title>A Practice Website</title>
